--- a/style.css
+++ b/style.css
@@ -44,3 +44,12 @@ body {
 p {
   margin-bottom: 0.5rem;
 }
+
+strong {
+  font-weight: 900;
+}
+
+.img-inline {
+  width: 300px;
+  height: auto;
+}
